--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ it('should return the expected VAT', () => {
 <section>
   <section>
     <h2>Code Coverage</h2>
-    <p>example of report</p>
+    <img src="./img/report.png" alt="Code Coverage Report" style="width: 80%">
   </section>
   <section>
     <h3>How code coverage works is generated?</h3>
@@ -300,7 +300,7 @@ it('return the expected VAT', () => {
 });
       </code>
       <code class="fragment">
-// 3.5
+// 3.55
       </code>
     </pre>
   </section>
@@ -338,7 +338,7 @@ it('return the expected VAT', () => {
     <pre class="fragment"><code>
 // Jest Snapshot v1, https://goo.gl/fbAQLP
 
-exports[`return the expected VAT 1`] = `3.5`;        
+exports[`return the expected VAT 1`] = `3.55`;
     </code></pre>
   </section>
   <section>
@@ -348,7 +348,7 @@ exports[`return the expected VAT 1`] = `3.5`;
     <h2>👍 Good usecase</h2>
     <pre><code>
 it('should render correctly', () => {
-  const wrapper = shallowMount(Alert, {
+  const wrapper = mount(Alert, {
     propsData: {
       message: 'Test message',
     },
@@ -464,6 +464,7 @@ const flushPromises = () => new Promise(resolve => setTimeout(resolve));
   </section>
   <section>
     <h2>Mount vs. ShallowMount</h2>
+    <img src="./img/mountshallowmount.png" alt="Mount vs. ShallowMount" width="80%">
   </section>
 </section>
 <!-- <section>
@@ -535,6 +536,11 @@ const flushPromises = () => new Promise(resolve => setTimeout(resolve));
 </section>
 <section>
   <h2>Thank you!</h2>
+  <p class="me-link">
+    <a href="https://twitter.com/_maxpou"><i class="fa fa-twitter"></i> @_maxpou</a> -
+    <a href="http://www.maxpou.fr/"><i class="fa fa-globe"></i> maxpou.fr</a> -
+    <a href="mailto:hello@maxpou.fr"><i class="fa fa-envelope-o"></i> hello@maxpou.fr</a>
+  </p>
 </section>
 <section>
   <section>
