bim boum badaboum

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ document.getElementsByTagName('head')[0].appendChild(link);
       <li>🎒 Digital Nomad & ✈️ Serial Traveler</li>
       <li>🍺 Beer appreciator</li>
     </ul>
+    <br>
+    <p class="fragment">I'm from Nantes (France) not Paris ;)</p>
   </section>
   <section>
     <h2>Effective Frontend Testing</h2>
@@ -81,7 +83,6 @@ document.getElementsByTagName('head')[0].appendChild(link);
       <li class="fragment">👊 Helps to write better code</li>
       <li class="fragment">💸 Reduce maintenance cost</li>
     </ul>
-    <p>TODO: img with cost of BUG?</p>
     <aside class="notes">
       <li>Gives **confidence** that software works as expected. So it's easier to remove/refactor code</li>
       <li>Document codebase (unit) and application behavior (e2e).</li>
@@ -547,11 +548,10 @@ const flushPromises = () => new Promise(resolve => setTimeout(resolve));
     <h2>Backup</h2>  
   </section>
   <section>
-    <h1>TLDL;</h1>
-    <ul>
-      <li>Don't test implementation details</li>
-      <li>It's OK not to cover 100%</li>
-    </ul>
+    <img src="./img/bug-evolution.png" alt="">
+  </section>
+  <section>
+    <img src="./img/risk-cc.png" alt="">
   </section>
   <section>
     <a href="https://www.youtube.com/watch?v=zqdCM8zR6Mc">Jason Lengstorf – Building a testing- and quality-driven culture at IBM</a>
